--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-node_modules
 .next
+.env
+.env.build
+
+# Dependency directories
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
