--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,13 @@
   ],
   "plugins": [
     [
+      "babel-plugin-root-import",
+      {
+        "rootPathSuffix": "./src",
+        "rootPathPrefix": "~/"
+      }
+    ],
+    [
       "babel-plugin-styled-components"
     ]
   ]
