--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint src",
+    "lint-staged": "eslint"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@ijsto/eslint-config": "^3.0.1",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-root-import": "^6.6.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -42,5 +45,10 @@
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js}": [
+      "git add"
+    ]
   }
 }
